--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
 
     - name: Set up Go 1.x
