--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -22,10 +22,9 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.14
-        id: go
 
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@master
+        uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
           args: release --rm-dist
